# 2025-smigiel

./: RUN.md  binoculars.py  gather_results.py  lengthxbinoscore.py  model.py  perplexity_to_cross_perplexity_plot.py  prepare_results.py  pyproject.toml  test_binocular.py
logs/: bielik3
