[project]
name = "2025-smigiel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "matplotlib>=3.10.7",
    "mlx>=0.29.4",
    "mlx-lm>=0.28.3",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
